--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port:8067
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test1
+spring.datasource.url=jdbc:mysql://localhost:3306/my_data_base
 spring.datasource.username=root
 spring.datasource.password=ngcb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
