--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,20 @@
     <artifactId>spring-messaging</artifactId>
 </dependency>
 
+<!-- SLF4J -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.32</version>
+    </dependency>
+
+    <!-- Logback -->
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.6</version>
+    </dependency>
+    
 
 
 </dependencies>
@@ -111,6 +125,7 @@
                     </path>
                 </annotationProcessorPaths>
             </configuration>
+            
         </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
