--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <scope>test</scope>
 </dependency>
 
-	
+
 	<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-security</artifactId>
@@ -55,6 +55,11 @@
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-web</artifactId>
 </dependency>
+<!--<dependency>-->
+<!--    <groupId>org.springframework</groupId>-->
+<!--    <artifactId>spring-web</artifactId>-->
+<!--    <version>5.3.9</version>-->
+<!--</dependency>-->
 <dependency>
 <groupId>mysql</groupId>
 <artifactId>mysql-connector-java</artifactId>
@@ -96,7 +101,6 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-websocket</artifactId>
 </dependency>
-
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-messaging</artifactId>
